--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "Billow frontend client",
   "type": "module",
-  "keywords": ["billow", "productivity", "react", "vite", "typescript", "tailwindcss"],
+  "keywords": [
+    "billow",
+    "productivity",
+    "react",
+    "vite",
+    "typescript",
+    "tailwindcss"
+  ],
   "author": "Damion Broussard <2dame>",
   "license": "MIT",
   "repository": {
@@ -25,26 +32,31 @@
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "chart.js": "^4.4.1",
+    "date-fns": "^3.0.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "axios": "^1.6.5",
-    "socket.io-client": "^4.6.1",
-    "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
-    "date-fns": "^3.0.6"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "prettier": "^3.1.1"
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "postcss": "^8.4.33",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11"
   }
 }
-
