fix: add global TypeScript install for Render build

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,27 +1,36 @@
 FROM node:20-alpine
 
+# Set working directory
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY package.json package-lock.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install ALL dependencies (needed for TypeScript build)
+RUN npm ci
 
-# Copy source
+# Install TypeScript globally to ensure it's available for build
+RUN npm install -g typescript@5.3.3
+
+# Copy source code
 COPY . .
 
 # Build TypeScript
 RUN npm run build
 
-# Expose port
-ENV PORT=5000
-EXPOSE 5000
+# Remove dev dependencies to reduce image size
+RUN npm prune --production
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=40s \
-  CMD node -e "require('http').get('http://localhost:5000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+# Expose Render's default port
+EXPOSE 10000
 
-# Start server
+# Set production environment
+ENV NODE_ENV=production
+ENV PORT=10000
+
+# Health check for Render
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:10000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+
+# Start the server
 CMD ["npm", "start"]
-
